my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WUNUSED_DML12/WUNUSED_DML12.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\WUNUSED_DML12.dml:92:11: warning WEXPERIMENTAL_UNMAPPED: Use of unsupported feature: _unmapped_write_access
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\WUNUSED_DML12.dml:81:11: warning WEXPERIMENTAL_UNMAPPED: Use of unsupported feature: _unmapped_read_access
